testing and encryotion

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 altgraph==0.17.4
-packaging==24.2
-pyinstaller==6.11.1
+beautifulsoup4==4.12.3
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 colorama==0.4.6
+cryptography==43.0.3
+humanize==4.11.0
+idna==3.10
+packaging==24.2
+pillow==11.0.0
+pycparser==2.22
+pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2024.10
+requests==2.32.3
+setuptools==75.5.0
+soupsieve==2.6
+urllib3==2.2.3
